--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.8.0",
     "axios": "^1.7.7",
@@ -39,6 +40,8 @@
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "review-book-app": "file:",
     "sanitize-html": "^2.13.0",
     "sass": "^1.78.0",
