--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.25",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.8.0",
     "axios": "^1.7.7",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +31,7 @@
     "flowbite-react": "^0.10.1",
     "lucide-react": "^0.429.0",
     "next": "^14.2.11",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nuka-carousel": "^7.0.0",
     "pnpm": "^9.10.0",
@@ -42,20 +45,24 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "resend": "^4.0.0",
     "review-book-app": "file:",
     "sanitize-html": "^2.13.0",
     "sass": "^1.78.0",
     "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
     "uploadthing": "^6.13.3",
-    "Utils": "^1.0.39"
+    "Utils": "^1.0.39",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.6",
     "mini-css-extract-plugin": "^2.9.1",
