--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/input": "^2.2.5",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -23,6 +24,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.8.0",
+    "Utils": "^1.0.39",
     "axios": "^1.7.7",
     "base64url": "^3.0.1",
     "bcryptjs": "^2.4.3",
@@ -55,7 +57,6 @@
     "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
     "uploadthing": "^6.13.3",
-    "Utils": "^1.0.39",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
